[project]
name = "nifcloud-mcp"
version = "0.1.0"
description = "FJcloud-V MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "nifcloud>=1.16.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.11.4",
]
